--- a/section/promoteOffers/shopifyIntegration.mdx
+++ b/section/promoteOffers/shopifyIntegration.mdx
@@ -18,7 +18,7 @@ Once installed you will be able to see the following Gocertify blocks in your Sh
 
 Other types of OSM (floating button, sticky bar etc) can all be enabled directly from the Gocertify dashboard as usual without the need to add any additional blocks.
 
-<Frame caption = "gocertify blocks can be added directly to your site using the Shopify builder">
+<Frame caption = "Gocertify blocks can be added directly to your site using the Shopify builder">
 <img
     className="block dark:hidden"
     src="/images/shopify/shopify-blocks.png"
