--- a/section/captureData/webhooksZapier.mdx
+++ b/section/captureData/webhooksZapier.mdx
@@ -11,7 +11,7 @@ To go live simply provide the endpoint to the partners@gocertify.me - this endpo
 
 ## Webhook Events
 
-We will send you two events. THe first event happens at Step 1 of the flow below (`Data sent to your CRM`), and the second event happens at Step 3 (`Verification status sent to CRM`).
+We will send you two events. The first event happens at Step 1 of the flow below (`Data sent to your CRM`), and the second event happens at Step 3 (`Verification status sent to CRM`).
 
 <Frame caption="DataCapture adds an additional step to the reward flow where you can collect data from shoppers">
   <img
