--- a/section/gettingStarted/integrateOnSite.mdx
+++ b/section/gettingStarted/integrateOnSite.mdx
@@ -95,11 +95,11 @@ Tag managers let you can easily add the Gocertify script site-wide without needi
   <Accordion icon="shopify" title="Shopify">
 
     <Steps>
-    <Step title="Request an install link">
-        As our Shopify app is still in Beta you will need to first request an install link from your Gocertify account manager.
+    <Step title="Navigate to the Shopify app">
+        Navigate to our [Shopify app](https://apps.shopify.com/gocertify-dev).
       </Step>
       <Step title="Install the app">
-        Once you have received the install link, you can install the app by clicking on the link and selecting `Install`.
+        Install the app by clicking on the link and selecting `Install`.
         <Frame>
           <img src="/images/shopify/shopify-install-screen1.png" alt="Shopify install screen" />
         </Frame>
