Refine installation instructions for Shopify app

--- a/section/gettingStarted/integrateOnSite.mdx
+++ b/section/gettingStarted/integrateOnSite.mdx
@@ -99,7 +99,7 @@ Tag managers let you can easily add the Gocertify script site-wide without needi
         Navigate to our [Shopify app](https://apps.shopify.com/gocertify-dev).
       </Step>
       <Step title="Install the app">
-        Install the app by clicking on the link and selecting `Install`.
+        Install the app by clicking `Install`.
         <Frame>
           <img src="/images/shopify/shopify-install-screen1.png" alt="Shopify install screen" />
         </Frame>
