Updated shopify integration URL

--- a/section/gettingStarted/integrateOnSite.mdx
+++ b/section/gettingStarted/integrateOnSite.mdx
@@ -96,7 +96,7 @@ Tag managers let you can easily add the Gocertify script site-wide without needi
 
     <Steps>
     <Step title="Navigate to the Shopify app">
-        Navigate to our [Shopify app](https://apps.shopify.com/gocertify-dev).
+        Navigate to our [Shopify app](https://apps.shopify.com/gocertify).
       </Step>
       <Step title="Install the app">
         Install the app by clicking `Install`.
