Add new permission required for Emarsys (contact.list)

--- a/section/captureData/emarsys.mdx
+++ b/section/captureData/emarsys.mdx
@@ -100,32 +100,15 @@ To start syncing data you'll need to create a new API user and share the details
     </Step>
 
     <Step title="Authorise the API user">
+    <Tip>On May 1st 2025 we added a new permission to this list (`contact.list`). If you integrated before this date, you will need to add it manually.</Tip>
+
     Authorise the API user to do all the automations we described in the overview, enabling all the checkboxes shown below:
     <img
-    className="block dark:hidden"
+    className="block"
     src="/images/emarsysContactAuthorisation.png"
     alt="Emarsys contact authorisation"
     style={{ borderRadius: '0.5rem' }}
     />
-    <img
-    className="hidden dark:block"
-    src="/images/emarsysContactAuthorisation.png"
-    alt="Emarsys contact authorisation"
-    style={{ borderRadius: '0.5rem' }}
-    />
-    <img
-    className="block dark:hidden"
-    src="/images/emarsysEventAndFieldAuthorisation.png"
-    alt="Emarsys event and field authorisation"
-    style={{ borderRadius: '0.5rem' }}
-    />
-    <img
-    className="hidden dark:block"
-    src="/images/emarsysEventAndFieldAuthorisation.png"
-    alt="Emarsys event and field authorisation"
-    style={{ borderRadius: '0.5rem' }}
-    />
-
     </Step>
 
     <Step title="Navigate to Field Editor">
