Add documentation for Attentive (WIP)

--- a/section/captureData/CDPintegrationOverview.mdx
+++ b/section/captureData/CDPintegrationOverview.mdx
@@ -24,4 +24,7 @@ Gocertify also supports a direct integration with the following platforms, enabl
   <Card title="Bloomreach" href="/section/captureData/bloomreach" img="/images/bloomreachLogo.png">
      Personalise the ecommerce experience. Use real-time data and AI to connect every customer with what they want to see
   </Card>
+  <Card title="Attentive" href="/section/captureData/attentive" img="/images/attentiveLogo.png">
+     Attentive is a customer engagement platform that helps you build and grow your email list.
+  </Card>
 </CardGroup>
