--- a/section/captureData/attentive.mdx
+++ b/section/captureData/attentive.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Attentive'
-description: 'Attentive is a customer engagement platform that helps you build and grow your email list.'
+description: 'Attentive is a customer engagement platform that helps you build and grow your email and SMS list.'
 icon: 'fa-fw'
 ---
 
@@ -56,7 +56,6 @@ Gocertify, and contact your Attentive's account manager to create a new "Sign-up
   </Steps>
 </Accordion>
 
-
 ## How data will appear in Attentive
 
 Each shopper that shares their data with your brand will appear as a **"Subscriber"** in your Attentive account.
@@ -86,10 +85,6 @@ You can see the reference to "Gocertify" in their"Sign-up unit".
       style={{ borderRadius: '0.5rem' }}/>
   </Card>
 </CardGroup>
-
-
-
-
 
 ## How to create segments in Attentive
 
