--- a/section/captureData/attentive.mdx
+++ b/section/captureData/attentive.mdx
@@ -26,13 +26,13 @@ Gocertify, and contact your Attentive's account manager to create a new "Sign-up
 
       Once in the Marketplace, click on the "+ Create app" button.
 
-      <img className="block" src="/images/attentiveMarketplace.png" alt="Attentive Marketplace" style={{ borderRadius: '0.5rem' }} />
+      <img className="block" src="/images/attentive/marketplace.png" alt="Attentive Marketplace" style={{ borderRadius: '0.5rem' }} />
     </Step>
 
     <Step title="Fill in the details">
       Set the name of the app to "Gocertify", add your email address in the "Contact email" field, and 
       set the permissions to "Write" for "Custom Events" and "Subscribers".
-      <img className="block" src="/images/attentiveCreateApp.png" alt="Attentive Create App" style={{ borderRadius: '0.5rem' }} />
+      <img className="block" src="/images/attentive/createApp.png" alt="Attentive Create App" style={{ borderRadius: '0.5rem' }} />
     </Step>
 
     <Step title="Share the API key with Gocertify">
@@ -46,7 +46,7 @@ Gocertify, and contact your Attentive's account manager to create a new "Sign-up
 
       Once created, share its ID with your Gocertify account manager. You will find this method in the "Sign-up units" section, as shown below.
 
-      <img className="block" src="/images/attentiveSignupMethod.png" alt="Attentive Sign-up method" style={{ borderRadius: '0.5rem' }} />
+      <img className="block" src="/images/attentive/signupMethod.png" alt="Attentive Sign-up method" style={{ borderRadius: '0.5rem' }} />
 
       <Tip>
         In the future, you will be able to create your Sign-up method directly in the "Sign-up units" section, 
@@ -64,23 +64,23 @@ By default, they will have 2 subscriptions, one for **"Email marketing"** and an
 Both subscriptions will need to be confirmed by them, by clicking a link in the email or the SMS. 
 You can see the reference to "Gocertify" in their"Sign-up unit".
 
-<img className="block" src="/images/attentiveSubscriber.png" alt="Attentive Subscriber" style={{ borderRadius: '0.5rem' }}/>
+<img className="block" src="/images/attentive/subscriber.png" alt="Attentive Subscriber" style={{ borderRadius: '0.5rem' }}/>
 
 <CardGroup>
   <Card>
-    In the "Activities" tab, you will see when they confirmed their subscriptions, as shown below.
+    In the "Activities" tab, you will see all the events we have sent (when they claim an offer) and when they confirmed their subscriptions, as shown below.
     <img
       className="block"
-      src="/images/attentiveSubscriberActivities.png"
+      src="/images/attentive/subscriberActivities.png"
       alt="Attentive Subscriber Activities"
       style={{ borderRadius: '0.5rem' }}/>
   </Card>
 
   <Card>
-    In the "Offers" tab, you will see something like this:
+    In the "Offers" tab, you will see the usual content. Gocertify won't update this section.
     <img
       className="block"
-      src="/images/attentiveSubscriberOffers.png"
+      src="/images/attentive/subscriberOffers.png"
       alt="Attentive Subscriber Offers"
       style={{ borderRadius: '0.5rem' }}/>
   </Card>
@@ -98,28 +98,28 @@ In the side menu, go to the "Segments" section and click on the "+ Create segmen
   <Step title="Choose condition">
     In this first dropdown, select the first option, for "A subscriber's activity", as shown below.
 
-    <img className="block" src="/images/attentiveChooseCondition.png" alt="Attentive Choose Condition" style={{ borderRadius: '0.5rem' }}/>
+    <img className="block" src="/images/attentive/chooseCondition.png" alt="Attentive Choose Condition" style={{ borderRadius: '0.5rem' }}/>
   </Step>
 
   <Step title="Choose activitiy">
     In the second dropdown, scroll down and select the option "Gocertify", as shown below.
 
-    <img className="block" src="/images/attentiveChooseActivity.png" alt="Attentive Choose Activity" style={{ borderRadius: '0.5rem' }}/>
+    <img className="block" src="/images/attentive/chooseActivity.png" alt="Attentive Choose Activity" style={{ borderRadius: '0.5rem' }}/>
   </Step>
 
   <Step title="Add a filter">
     By default, you will have a filter for "at least once in the last 365 days", meaning that this segment
     will include all your subscribers that have interacted with your brand through Gocertify in the last year.
 
-    <img className="block" src="/images/attentiveFilterBase.png" alt="Attentive Add Filter" style={{ borderRadius: '0.5rem' }}/>
+    <img className="block" src="/images/attentive/filterBase.png" alt="Attentive Add Filter" style={{ borderRadius: '0.5rem' }}/>
 
     Most of the time, you will want to add a second filter for each of the groups you have in your offers. 
     For example, if you have an offer for students, a filter for "Student" will be added to the segment.
 
     In order to do this, click in the "Filter" button and then select "parent_group" in the dropdown. 
-    Then, select the group you want to add to the segment.
+    Then, select the group you want to add to the segment, for example "Student".
 
-    <img className="block" src="/images/attentiveFilterCondition.png" alt="Attentive Add Filter" style={{ borderRadius: '0.5rem' }}/>
+    <img className="block" src="/images/attentive/filterCondition.png" alt="Attentive Add Filter" style={{ borderRadius: '0.5rem' }}/>
   </Step>
 
   <Step title="Save the segment">
@@ -133,7 +133,7 @@ You will be able to use more information that we send in that "Gocertify" event,
 the campaign name, or any custom field you add to the DataCapture.
 
 - `user_country`: the country of the user, in ISO 3166-1 alpha-2 format (e.g. "US", "FR", "ES", "GB", etc.)
-- `campaign_titlee`: the title of the campaign the user verified as (e.g. "Students get 15% OFF at Acme")
+- `campaign_title`: the title of the campaign the user verified as (e.g. "Students get 15% OFF at Acme")
 - `campaign_slug`: the slug of the campaign the user verified as (e.g. "students")
 
 
