Add documentation for different types of consent on Bloomreach

--- a/section/captureData/CDPintegrationOverview.mdx
+++ b/section/captureData/CDPintegrationOverview.mdx
@@ -21,7 +21,7 @@ Gocertify also supports a direct integration with the following platforms, enabl
   <Card title="Ometria" href="/section/captureData/ometria" img="/images/ometriaLogo.png">
     Use real-time customer data to drive better insight & on-point personalization
   </Card>
-  <Card title="Bloomreach" href="/section/captureData/bloomreach" img="/images/bloomreachLogo.png">
+  <Card title="Bloomreach" href="/section/captureData/bloomreach" img="/images/bloomreach/logo.png">
      Personalise the ecommerce experience. Use real-time data and AI to connect every customer with what they want to see
   </Card>
   <Card title="Attentive" href="/section/captureData/attentive" img="/images/attentive/logo.png">
