--- a/section/promoteOffers/osmPersonalisationIntegrations.mdx
+++ b/section/promoteOffers/osmPersonalisationIntegrations.mdx
@@ -10,7 +10,7 @@ goertify let's you integrate with Customer Experience Platforms (CXP) to deliver
   <Card title="Nosto" href="/section/promoteOffers/nosto" img="/images/nostoLogo.png">
     Create powerfully personalized experiences.
   </Card>
-  <Card title="Bloomreach" href="/section/promoteOffers/bloomreach" img="/images/bloomreachLogo.png">
+  <Card title="Bloomreach" href="/section/promoteOffers/bloomreach" img="/images/bloomreach/logo.png">
     Build cutting edge digital experiences with ecommerce-first product discovery technology
   </Card>
   
