Add refreshing content page

--- a/section/promoteOffers/advancedTargeting.mdx
+++ b/section/promoteOffers/advancedTargeting.mdx
@@ -1,5 +1,5 @@
 ---
-title: Advanced Targeting
+title: Advanced targeting
 description: 'Advanced system to set the target pages for your offers.'
 icon: 'fa-fw'
 ---
