--- a/section/trackImpact/overview.mdx
+++ b/section/trackImpact/overview.mdx
@@ -8,6 +8,17 @@ understand campaign effectiveness, shopper behavior, and identify opportunities 
 
 <img src="/images/gocertify-Dashboard.png" alt="Report" style={{borderRadius: '0.5rem'}} />
 
+## Dashboard Access
+Access to the Gocertify platform is via a magic link, which is a secure, time-limited URL sent to a user's email address. Here's what that means:
+- **No Password Required:** Users do not create or manage passwords. This reduces the risk of password-related breaches (like reused or weak passwords).
+- **Email-Based Authentication:** The link is emailed directly to the user’s registered address, and clicking it logs them in automatically.
+- **Expiration Window:** Each link is valid for 8 hours. After that, it becomes inactive, and the user must request a new one.
+- **One-Time Use:** Magic links are single-use and tied to a session. This adds another layer of security.
+- **No Personal Data Stored:** The Gocertify platform does not contain sensitive personal data. It is only used to:
+  - View user engagement reports.
+  - Download CSV exports (if applicable).
+  - Configure on-site messaging and campaign settings.
+
 ## Implementing Tracking
 To gain a full picture of your shoppers you will need to implement tracking at two key stages of the shopper journey:
 
