--- a/section/trackImpact/overview.mdx
+++ b/section/trackImpact/overview.mdx
@@ -4,9 +4,9 @@ description: 'Monitor the impact of your reward strategy.'
 ---
 
 Gocertify gives you powerful insights into how your rewards are performing site-wide, helping you
-understand campaign effectiveness, shopper behavior, and identify opportunities for optimisation. You can view these insights in your [self-serve reporting dashboard](/section/trackImpact/reportingDashboard).
+understand campaign effectiveness, shopper behavior, and identify opportunities for optimisation. You can view these insights in your [self-serve reporting dashboard](/section/trackImpact/report).
 
-<img src="/images/gocertify-Dashboard.png" alt="Report" style={{borderRadius: '0.5rem'}} />
+<img src="/images/gocertify-Dashboard.png" alt="Report" style={{borderRadius: '0.5rem'}} />.
 
 ## Dashboard Access
 Access to the Gocertify platform is via a magic link, which is a secure, time-limited URL sent to a user's email address. Here's what that means:
