--- a/changelog/overview.mdx
+++ b/changelog/overview.mdx
@@ -3,12 +3,52 @@ title: Product Updates
 description: 'The newest features and improvements from Gocertify'
 ---
 
+<Update label="June 2025" description="">
+  ## Yotpo Integration
+  <Frame>
+        <img src="/images/integrations/Yotpo-Integration.png" alt="Yotpo Integration" width="100%" style={{ borderRadius: '0.5rem' }} />
+  </Frame>
+  Gocertify now integrates with Yotpo! Reward your users with points when they verify as a member of a target group (Students, Key Workers, etc).
+  Find more information in the [Yotpo Integration](/section/promoteOffers/yotpo) section.
+  
+</Update>
+
+<Update label="May 2025" description="">
+  ## Dynamic Messaging
+  <Frame>
+        <img src="/images/osm/DynamicMessaging.png" alt="Dynamic Messaging" width="100%" style={{ borderRadius: '0.5rem' }} />
+  </Frame>
+  Personalise your on-site messaging with dynamic messaging. We've introduced custom variables so you can fully customise your CTA's, from highlighting specific products (e.g. "Like this bag? Get 20% off!") to personalising the messsage for logged in users ("Sarah, you've got 20% off your next purchase!").
+  Find more information in the [Dynamic Messaging](/section/promoteOffers/dynamictext) section.
+  
+</Update>
+
+<Update label="April 2025" description="">
+  ## Attentive Integration
+  <Frame>
+        <img src="/images/integrations/Attentive-Integration.png" alt="Attentive Integration" width="100%" style={{ borderRadius: '0.5rem' }} />
+  </Frame>
+  Gocertify now integrates with Attentive! Keep your shoppers engaged with personalised, targeted offers and rewards.
+  Find more information in the [Attentive Integration](/section/captureData/attentive) section.
+  
+</Update>
+
+<Update label="March 2025" description="">
+  ## Advanced OSM targeting
+  <Frame>
+        <img src="/images/osm/AdvancedTargeting.png" alt="Advanced Targeting" width="100%" style={{ borderRadius: '0.5rem' }} />
+  </Frame>
+  Advanced targeting is an enterprise feature that let's you run unique on-site messages at scale. From targeting specific product SKUs to showing data driven messaging (i.e. based on stock levels), you can now run more targeted and impactful campaigns.
+  Find more information in the [Advanced Targeting](/section/promoteOffers/advancedTargeting) section.
+  
+</Update>
+
 <Update label="February 2025" description="">
   ## New custom OSM Visibility rules
   <Frame>
         <img src="/images/osm/osmScriptVisibilityRule.png" alt="Path rule" width="100%" style={{ borderRadius: '0.5rem' }} />
   </Frame>
-  Use JavaScript to define your _own visibility rules_ based on **any data** available on site or in your datalayer.
+  Use JavaScript to define your _own visibility rules_ based on **any data** available   or in your datalayer.
   For example, you could create a custom rule to only show an offer to shoppers who have a certain basket value, helping drive an increase in AoV.
   Find more information in the [On Site Messaging](/section/promoteOffers/osmVisibility#script) section.
   
