--- a/section/promoteOffers/dynamicText.mdx
+++ b/section/promoteOffers/dynamicText.mdx
@@ -100,6 +100,6 @@ Then, you need to set the value for that variable (as "data attribute") when ren
 
 Asuming that the maximum discount available on the campaigns associated to this placement (p-123456) is 20% off, the savings amount will be automatically calculated as 1960 (9800 * 20%), and the resulting text will be:
 
-> **Save £19.60** on this Shoes
+> **Save £19.60** on these Shoes
 
 Of course, you will probably want to replace those hardcoded values with variables from your data layer (on Google Tag Manager, for example) or from your CMS.
