Move in store to getting started

--- a/section/gettingStarted/integrateInStore.mdx
+++ b/section/gettingStarted/integrateInStore.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'In Store'
+title: 'Integrate In Store'
 description: 'Start building loyal communities with targeted, gated offers.'
 icon: 'shop'
 ---
