Updated loyalty text

--- a/section/integrations/overview.mdx
+++ b/section/integrations/overview.mdx
@@ -29,11 +29,11 @@ description: 'Connect Gocertify with your favorite tools and platforms'
   </Card>
   
   <Card title="Nosto" href="/section/promoteOffers/nosto" img="/images/nostoLogo.png">
-    Create powerfully personalized experiences.
+    Create powerfully personalised experiences.
   </Card>
   
   <Card title="Yotpo" href="/section/promoteOffers/yotpo" img="/images/integrations/Yotpo-logo.png">
-    Create powerfully personalized experiences.
+    Reward your most loyal customers.
   </Card>
   
   <Card title="Shopify" href="/section/promoteOffers/shopifyIntegration" img="/images/integrations/Shopify-logo.png">
