Updated shopify docs

--- a/section/promoteOffers/shopifyIntegration.mdx
+++ b/section/promoteOffers/shopifyIntegration.mdx
@@ -8,9 +8,9 @@ Gocertify has a native integration with Shopify. This allows you to easily promo
 app follow the Shopify Specific instructions in [Integrate on Site](/section/gettingStarted/integrateOnSite#shopify). We also can connect directly to your [Shopify discounts](/section/buildRewardFlows/discounts#integrating-with-shopify) to create unique codes for each shopper.
 
 Once installed you will be able to see the following Gocertify blocks in your Shopify builder:
-- **iFrame block:** add a Gocertify [landing pages](/section/gettingStarted/landingPages) to your site
-- **OfferHub block:** lets you drag and drop [OfferHub](/section/promoteOffers/OfferHub) on site
-- **On-Site Message block:** lets you add [inline OSM messages](/section/promoteOffers/on-site-placements) to your site.
+- **iFrame block:** add a Gocertify landing pages to your site and drag in the app block `iFrame`
+- **OfferHub block:** add an offer page to your site and drag in the `OfferHub` block
+- **On-Site Message block:** navigate to any page and drag in the `On-Site Message` block
 
 Other types of OSM (floating button, sticky bar etc) can all be enabled directly from the Gocertify dashboard as usual without the need to add any additional blocks.
 
